src/objects/Opportunity_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Competitor__r.Street_Address__c &amp; BR() &amp; 
Competitor__r.City__c &amp; 
IF(
   AND(
       NOT(ISBLANK(Competitor__r.City__c)),
       NOT(ISBLANK(Competitor__r.State__c))
       ),
&quot;, &quot;, &quot;&quot;
   ) &amp; Competitor__r.State__c &amp; &quot;  &quot; &amp; Competitor__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Use_Serviced__c</fullName>
        <formula>Competitor__r.Application_Use_Serviced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Use Serviced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <formula>Competitor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Type__c</fullName>
        <formula>TEXT(  Competitor__r.Competitor_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Specific_Information__c</fullName>
        <label>Opportunity Specific Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <formula>Competitor__r.Primary_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Categories_Available__c</fullName>
        <formula>TEXT( Competitor__r.Product_Categories_Available__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Categories Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <formula>Competitor__r.Strengths__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strengths</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Markets__c</fullName>
        <formula>TEXT(Competitor__r.Target_Markets__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Markets</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <formula>Competitor__r.Weaknesses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weaknesses</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>OC-{00000}</displayFormat>
        <label>OC-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>